--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -86,6 +86,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp80"
                     android:background="@color/white"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/dp16"
@@ -136,14 +137,14 @@
                             android:layout_marginTop="@dimen/dp15"
                             android:orientation="vertical">
 
-                            <com.nex3z.flowlayout.FlowLayout
-                                android:id="@+id/flow_layout_list_size"
+                            <android.support.v7.widget.RecyclerView
+                                android:id="@+id/recycler_view_list_size"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 app:flChildSpacing="@dimen/dp11"
                                 app:flRowSpacing="@dimen/dp10">
 
-                            </com.nex3z.flowlayout.FlowLayout>
+                            </android.support.v7.widget.RecyclerView>
                         </LinearLayout>
 
                     </LinearLayout>
@@ -163,20 +164,20 @@
                             android:textColor="@color/black_two"
                             android:textSize="@dimen/sp14" />
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
+                        <FrameLayout
+                            android:layout_width="@dimen/dp110"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="@dimen/dp30"
-                            android:background="@drawable/background_item_quantity"
-                            android:orientation="horizontal">
+                            android:background="@drawable/background_item_quantity">
 
                             <TextView
                                 android:id="@+id/text_view_substract"
-                                android:layout_width="@dimen/dp13"
+                                android:layout_width="wrap_content"
                                 android:layout_height="@dimen/dp30"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="@dimen/dp14"
-                                android:layout_marginRight="@dimen/dp14"
+                                android:layout_gravity="left|center_vertical"
+                                android:gravity="center"
+                                android:paddingLeft="@dimen/dp14"
+                                android:paddingRight="@dimen/dp14"
                                 android:text="-"
                                 android:textColor="@color/gray"
                                 android:textSize="@dimen/sp22" />
@@ -186,8 +187,6 @@
                                 android:layout_width="@dimen/dp13"
                                 android:layout_height="@dimen/dp30"
                                 android:layout_gravity="center"
-                                android:layout_marginLeft="@dimen/dp14"
-                                android:layout_marginRight="@dimen/dp14"
                                 android:gravity="center"
                                 android:text="1"
                                 android:textColor="@color/strawberry"
@@ -195,16 +194,16 @@
 
                             <TextView
                                 android:id="@+id/text_view_plus"
-                                android:layout_width="@dimen/dp13"
+                                android:layout_width="wrap_content"
                                 android:layout_height="@dimen/dp30"
-                                android:layout_gravity="center"
-                                android:layout_marginLeft="@dimen/dp14"
-                                android:layout_marginRight="@dimen/dp14"
+                                android:layout_gravity="right|center_vertical"
                                 android:gravity="center"
+                                android:paddingLeft="@dimen/dp14"
+                                android:paddingRight="@dimen/dp14"
                                 android:text="+"
                                 android:textColor="@color/gray"
                                 android:textSize="@dimen/dp22" />
-                        </LinearLayout>
+                        </FrameLayout>
 
                     </LinearLayout>
 
@@ -249,6 +248,7 @@ Style Code: 378037-623"
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/linear_layout_related_product"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/dp16"
@@ -257,7 +257,8 @@ Style Code: 378037-623"
                     android:background="@drawable/backgroun_maybe_you_care"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/dp5"
-                    android:paddingTop="@dimen/dp5">
+                    android:paddingTop="@dimen/dp5"
+                    android:visibility="gone">
 
 
                     <TextView
@@ -292,6 +293,7 @@ Style Code: 378037-623"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="@dimen/sp16"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
 </FrameLayout>
