--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -20,6 +20,7 @@
             android:gravity="center_vertical">
 
             <LinearLayout
+                android:id="@+id/linear_layout_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/dp10">
@@ -40,6 +41,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/button_done"
             android:layout_width="@dimen/dp60"
             android:layout_height="@dimen/dp35"
             android:layout_gravity="right|center_vertical"
@@ -59,17 +61,20 @@
         android:orientation="vertical">
 
         <RadioGroup
+            android:id="@+id/radio_group_payment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp12"
             android:layout_marginRight="@dimen/dp16">
 
             <RadioButton
+                android:id="@+id/radio_button_cash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/pinkish_red"
+                android:checked="true"
                 android:paddingLeft="@dimen/dp16"
-                android:text="Ship COD - thanh toán khi nhận hàng. "
+                android:text="Ship COD - Thanh toán khi nhận hàng. "
                 android:textColor="@color/greyish_brown_two"
                 android:textSize="@dimen/sp15" />
 
@@ -86,7 +91,8 @@
                 android:layout_height="@dimen/dp1"
                 android:layout_marginTop="@dimen/dp20"
                 android:alpha="0.09"
-                android:background="@color/brownish_grey" />
+                android:background="@color/brownish_grey"
+                android:visibility="gone" />
 
 
             <RadioButton
@@ -96,7 +102,8 @@
                 android:paddingLeft="@dimen/dp16"
                 android:text="Chuyển khoảng ngân hàng."
                 android:textColor="@color/greyish_brown_two"
-                android:textSize="@dimen/sp15" />
+                android:textSize="@dimen/sp15"
+                android:visibility="gone" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -108,7 +115,8 @@ viên của shop gọi xác nhận.
  Ngân hàng Vietcombank – 00110022312312 – CHI NHÁNH GIÔ GIA TỰ
 (PHÒNG GIAO DỊCH SỐ 9 – QUẬN 10)"
                 android:textColor="@color/warm_grey_four"
-                android:textSize="@dimen/sp12" />
+                android:textSize="@dimen/sp12"
+                android:visibility="gone" />
         </RadioGroup>
 
 
