--- a/app/src/main/res/layout/activity_first_login.xml
+++ b/app/src/main/res/layout/activity_first_login.xml
@@ -61,14 +61,13 @@
 
             <Button
                 android:id="@+id/button_done"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/dp70"
+                android:layout_height="@dimen/dp40"
                 android:layout_gravity="right"
                 android:layout_marginTop="@dimen/dp14"
-                android:layout_marginRight="@dimen/dp5"
+                android:layout_marginRight="@dimen/dp16"
                 android:background="@drawable/background_related_product"
                 android:text="Xong" />
-
 
 
         </FrameLayout>
