--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
         android:textSize="@dimen/sp14" />
 
     <Button
+        android:visibility="gone"
         android:id="@+id/button_login_by_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
