--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_marginTop="@dimen/dp20"
+    android:orientation="vertical"
     tools:context=".activity.NoteActivity">
 
     <FrameLayout
@@ -19,6 +19,7 @@
             android:gravity="center_vertical">
 
             <LinearLayout
+                android:id="@+id/linear_layout_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/dp10">
@@ -89,9 +90,10 @@
                     <EditText
                         android:id="@+id/edit_text_note"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/dp50"
                         android:layout_marginTop="@dimen/dp4"
                         android:background="@android:color/transparent"
+                        android:gravity="start"
                         android:hint="Bạn có muốn dặn dò gì không?"
                         android:paddingRight="@dimen/dp24"
                         android:textColor="@color/charcoal"
