--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -115,7 +115,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/dp10"
-                                android:text="Anh Cường - 0980123123" />
+                                android:text="Anh Cường - 0980123123"
+                                android:textSize="@dimen/sp14"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -137,8 +138,19 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/dp10"
-                                android:text="Vui lòng nhập địa chỉ tại đây." />
+                                android:text="Vui lòng nhập địa chỉ tại đây."
+                                android:textSize="@dimen/sp14"/>
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right|center_vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/ic_view_more" />
+                            </LinearLayout>
                         </LinearLayout>
 
                         <View
@@ -170,6 +182,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp11"
+                            android:gravity="center_vertical"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -178,14 +191,24 @@
                                 android:src="@mipmap/ic_chat" />
 
                             <TextView
+                                android:id="@+id/text_view_note"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/dp12"
-                                android:alpha="0.65"
                                 android:text="Bạn có ghi chú gì không?"
                                 android:textColor="@color/brownish_grey_two"
-                                android:textSize="@dimen/sp11" />
+                                android:textSize="@dimen/sp14" />
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right|center_vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/ic_view_more" />
+                            </LinearLayout>
                         </LinearLayout>
 
                         <View
@@ -218,7 +241,41 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp11"
+                            android:gravity="center_vertical"
                             android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="@dimen/dp18"
+                                android:layout_height="@dimen/dp18"
+                                android:src="@mipmap/ic_cash" />
+
+                            <TextView
+                                android:id="@+id/text_view_payment_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/dp12"
+                                android:text="Thanh toán bằng tiền mặt"
+                                android:textColor="@color/brownish_grey_two"
+                                android:textSize="@dimen/sp14" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right|center_vertical">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/ic_view_more" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp11"
+                            android:orientation="horizontal"
+                            android:visibility="gone">
 
                             <ImageView
                                 android:layout_width="@dimen/dp18"
@@ -274,11 +331,12 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/text_view_total_order"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="right"
                             android:text="830.000đ"
-                            android:textColor="@color/brownish_grey_two"
+                            android:textColor="@color/pinkish_red"
                             android:textSize="@dimen/sp14"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -299,11 +357,12 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/text_view_shipping_fee"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="right"
                             android:text="0đ"
-                            android:textColor="@color/brownish_grey_two"
+                            android:textColor="@color/pinkish_red"
                             android:textSize="@dimen/sp14"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -324,11 +383,12 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/text_view_promotion"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="right"
                             android:text="- 0đ"
-                            android:textColor="@color/brownish_grey_two"
+                            android:textColor="@color/pinkish_red"
                             android:textSize="@dimen/sp14"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -357,11 +417,12 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/text_view_total_amount"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="right"
                             android:text="830.000đ"
-                            android:textColor="@color/brownish_grey_two"
+                            android:textColor="@color/pinkish_red"
                             android:textSize="@dimen/sp22"
                             android:textStyle="bold" />
                     </LinearLayout>
