--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="grey2">#979797</color>
     <color name="light_black">#646464</color>
     <color name="strawberry">#ee2b32</color>
+    <color name="deep_red">#d70c13</color>
     <color name="warm_grey">#707070</color>
     <color name="warm_grey_two">#777777</color>
     <color name="grey">#f1f1f1</color>
