--- a/app/src/main/res/layout/activity_edit_order_detail.xml
+++ b/app/src/main/res/layout/activity_edit_order_detail.xml
@@ -160,11 +160,12 @@
                             android:textColor="@color/black_two"
                             android:textSize="@dimen/sp14" />
 
-                        <FrameLayout
-                            android:layout_width="@dimen/dp110"
+                        <LinearLayout
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="@dimen/dp30"
-                            android:background="@drawable/background_item_quantity">
+                            android:background="@drawable/background_item_quantity"
+                            android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/text_view_substract"
@@ -180,9 +181,11 @@
 
                             <TextView
                                 android:id="@+id/text_view_quantity"
-                                android:layout_width="@dimen/dp13"
-                                android:layout_height="@dimen/dp30"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:layout_marginLeft="@dimen/dp16"
+                                android:layout_marginRight="@dimen/dp16"
                                 android:gravity="center"
                                 android:text="1"
                                 android:textColor="@color/strawberry"
@@ -199,7 +202,7 @@
                                 android:text="+"
                                 android:textColor="@color/gray"
                                 android:textSize="@dimen/dp22" />
-                        </FrameLayout>
+                        </LinearLayout>
 
                     </LinearLayout>
 
