--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,6 +41,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/linear_layout_fullname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="TÔ QUỐC CƯỜNG"
@@ -49,6 +50,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/linear_layout_phone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp5"
